--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -129,16 +129,6 @@ const hasEducation = siteConfig.education && siteConfig.education.length > 0;
             >About</a
           >
           {
-            hasProjects && (
-              <a
-                href="#projects"
-                class="text-sm text-gray-600 hover:text-gray-800 transition-colors"
-              >
-                Projects
-              </a>
-            )
-          }
-          {
             hasExperience && (
               <a
                 href="#experience"
@@ -148,6 +138,17 @@ const hasEducation = siteConfig.education && siteConfig.education.length > 0;
               </a>
             )
           }
+          {
+            hasProjects && (
+              <a
+                href="#projects"
+                class="text-sm text-gray-600 hover:text-gray-800 transition-colors"
+              >
+                Projects
+              </a>
+            )
+          }
+          
           {
             hasEducation && (
               <a
@@ -159,10 +160,10 @@ const hasEducation = siteConfig.education && siteConfig.education.length > 0;
             )
           }
         </nav>
-        <p class="text-sm text-gray-500">
+        <!-- <p class="text-sm text-gray-500">
           © {new Date().getFullYear()}
           {siteConfig.name}. All rights reserved.
-        </p>
+        </p> -->
       </div>
     </div>
   </div>
